--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 dms/.config/DankMaterialShell/plugins/*
 hyprland/.config/hypr/current.conf
 .stignore
-.stfolder/syncthing-folder-82d80b.txt
+.stfolder/
 .stversions/
 ssh/.ssh/**
 !ssh/.ssh/config
