--- a/dms/.config/DankMaterialShell/settings.json
+++ b/dms/.config/DankMaterialShell/settings.json
@@ -336,6 +336,10 @@
           "enabled": true
         },
         {
+          "id": "systemTray",
+          "enabled": true
+        },
+        {
           "id": "battery",
           "enabled": true
         },
