update ssh config

--- a/ssh/.ssh/config
+++ b/ssh/.ssh/config
@@ -30,19 +30,19 @@ Host DL-Meidanis
 	ProxyJump IC-Unicamp
 
 Host dev
-	HostName fd7a:115c:a1e0::5501:f48a
+	HostName 100.69.244.46
 	User leo
 	IdentityFile ~/.ssh/personal
 	IdentitiesOnly yes
 
 Host laptop
-    HostName fd7a:115c:a1e0::3c01:b388
+    HostName 100.74.246.36
     User leo
     IdentityFile ~/.ssh/personal
     IdentitiesOnly yes
 
 Host pc
-    HostName fd7a:115c:a1e0::bc01:2047
+    HostName 100.113.5.78
     User leo
     IdentityFile ~/.ssh/personal
     IdentitiesOnly yes
