--- a/hyprland/.config/hypr/confs/input-laptop.conf
+++ b/hyprland/.config/hypr/confs/input-laptop.conf
@@ -9,7 +9,7 @@ input {
 
     touchpad {
         natural_scroll = true
-        disable_while_typing = true
+        disable_while_typing = false
         scroll_factor = 0.3
     }
 }
