--- a/hyprland/.config/hypr/confs/windowrules.conf
+++ b/hyprland/.config/hypr/confs/windowrules.conf
@@ -1,51 +1,35 @@
 # WINDOW RULES
 
 # Dialogs
-windowrulev2 = float, title:(Select|Open)( a)? (File|Folder)(s)?
-windowrulev2 = float, title:File (Operation|Upload)( Progress)?
-windowrulev2 = float, title:.* Properties
-windowrulev2 = float, title:Export Image as PNG
-windowrulev2 = float, title:GIMP Crash Debug
-windowrulev2 = float, title:Save As
-windowrulev2 = float, title:Library
-windowrulev2 = float, title:^(Rename.*)$
-windowrulev2 = tile, class:^(org\.wezfurlong\.wezterm)$
-windowrulev2 = float, class:^(org.quickshell)$, title:^(Settings)$
-windowrulev2 = float, class:^(org.quickshell)$, title:^(Add Widget)$
+windowrule = match:title (Select|Open)( a)? (File|Folder)(s)?, float on
+windowrule = match:title File (Operation|Upload)( Progress)?, float on
+windowrule = match:title .* Properties, float on
+windowrule = match:title Export Image as PNG, float on
+windowrule = match:title GIMP Crash Debug, float on
+windowrule = match:title Save As, float on
+windowrule = match:title Library, float on
+windowrule = match:title ^(Rename.*)$, float on, size (monitor_w*0.3) (monitor_h*0.1), center on
+windowrule = match:class ^(org\.wezfurlong\.wezterm)$, tile on
+windowrule = match:class org.quickshell, float on
 
 windowrulev2 = rounding 12, class:^(org\.gnome\.)
 windowrulev2 = noborder, class:^(org\.gnome\.)
 
-windowrulev2 = tile, class:^(gnome-control-center)$
-windowrulev2 = tile, class:^(pavucontrol)$
-windowrulev2 = tile, class:^(nm-connection-editor)$
+windowrule = match:class ^(gnome-control-center)$, float on
+windowrule = match:class ^(nm-connection-editor)$, float on
 
-windowrulev2 = float, title:(Qalculate!)$
-windowrulev2 = float, class:^(gnome-calculator)$
-windowrulev2 = float, class:^(galculator)$
-windowrulev2 = float, class:^(blueman-manager)$
-windowrulev2 = float, class:^(org\.gnome\.Nautilus)$
-windowrulev2 = tile, class:^(steam)$
-windowrulev2 = float, class:^(xdg-desktop-portal)$
+windowrule = match:title (Qalculate!)$, float on
+windowrule = match:class ^(gnome-calculator)$, float on
+windowrule = match:class ^(galculator)$, float on
+windowrule = match:class ^(blueman-manager)$, float on
+windowrule = match:class ^(org\.gnome\.Nautilus)$, float on
+windowrule = match:class ^(steam)$, float on
+windowrule = match:class ^(xdg-desktop-portal)$, float on
 
-windowrulev2 = noborder, class:^(org\.wezfurlong\.wezterm)$
-windowrulev2 = noborder, class:^(Alacritty)$
-windowrulev2 = noborder, class:^(zen)$
-windowrulev2 = noborder, class:^(com\.mitchellh\.ghostty)$
-windowrulev2 = noborder, class:^(kitty)$
+windowrule = match:class ^(firefox)$, match:title ^(Picture-in-Picture)$, float on
+windowrule = match:class ^(zoom)$, float on
 
-windowrulev2 = float, class:^(firefox)$, title:^(Picture-in-Picture)$
-windowrulev2 = float, class:^(zoom)$
-
-windowrulev2 = opacity 0.95 0.95, floating:0, focus:0
-
-windowrulev2 = float,title:^(Save File.*|Open File.*|.*wants to open.*|.*wants to save.*)$
-windowrulev2 = size 50% 60%,title:^(Save File.*|Open File.*|.*wants to open.*|.*wants to save.*)$
-windowrulev2 = center,title:^(Save File.*|Open File.*|.*wants to open.*|.*wants to save.*)$
-windowrulev2 = float, class:^(org.pulseaudio.pavucontrol)$
-windowrulev2 = size 800 600, class:^(org.pulseaudio.pavucontrol)$
-
-windowrulev2 = float, class:^(elecwhat)$
-windowrulev2 = size 1200 800, class:^(elecwhat)$
+windowrule = match:title ^(Save File.*|Open File.*|.*wants to open.*|.*wants to save.*)$, float on, size 50% 60%, center on
+windowrule = match:class ^(org.pulseaudio.pavucontrol)$, float on, size 800 600, center on
 
 # layerrule = noanim, ^(quickshell)$
