--- a/foot/.config/foot/dank-colors.ini
+++ b/foot/.config/foot/dank-colors.ini
@@ -1,22 +1,22 @@
 [colors]
-foreground=cdd6f4
-background=181825
-selection-foreground=cdd6f4
-selection-background=243f75
+foreground=e4e2e3
+background=131315
+selection-foreground=e4e2e3
+selection-background=424753
 
-regular0=181825
-regular1=e84d47
-regular2=70d66e
-regular3=dbd17b
-regular4=5983d1
-regular5=7791bb
-regular6=89b4fa
+regular0=2a2a2a
+regular1=ed5491
+regular2=9dd66e
+regular3=dba87b
+regular4=de6966
+regular5=bfbfbf
+regular6=ffffff
 regular7=abb2bf
 bright0=5c6370
-bright1=e05f5f
-bright2=87e086
-bright3=e8e097
-bright4=abd6ff
-bright5=4f80a9
-bright6=6879af
+bright1=e05f97
+bright2=aee086
+bright3=e8bd97
+bright4=d4d4d4
+bright5=c76673
+bright6=b57268
 bright7=ffffff
