--- a/hyprland/.config/hypr/confs/execs.conf
+++ b/hyprland/.config/hypr/confs/execs.conf
@@ -5,8 +5,7 @@ exec-once = wl-paste --type text --watch cliphist store
 exec-once = wl-paste --type image --watch cliphist store
 exec-once = wl-clip-persist --clipboard regular
 exec-once = trash-empty 30
-exec-once = dms run
-exec-once = /usr/lib/mate-polkit/polkit-mate-authentication-agent-1
+# exec-once = dms run
 exec-once = hyprctl dispatch workspace 1
 
 # Forward bluetooth media commands to MPRIS
