yazi theme and new hyprland windowrules

--- a/dms/.config/DankMaterialShell/plugin_settings.json
+++ b/dms/.config/DankMaterialShell/plugin_settings.json
@@ -30,8 +30,9 @@
   "grimblast": {
     "enabled": true
   },
-  "tailscale": {
+  "dockerManager": {
     "enabled": true,
-    "refreshInterval": 10
+    "terminalApp": "foot",
+    "groupByCompose": false
   }
 }
