--- a/hyprland/.config/hypr/confs/windowrules.conf
+++ b/hyprland/.config/hypr/confs/windowrules.conf
@@ -24,8 +24,10 @@ windowrule = match:class ^(galculator)$, float on
 windowrule = match:class ^(blueman-manager)$, float on
 windowrule = match:class ^(org\.gnome\.Nautilus)$, float on
 windowrule = match:class ^(steam)$, float on
-windowrule = match:class ^(xdg-desktop-portal)$, float on
+windowrule = match:class ^(xdg-desktop-portal)$, float on, size (monitor_w*0.5) (monitor_h*0.6), center on
+windowrule = match:class ^(xdm-app), float on
 
+windowrule = match:class ^(brave-browser)$, opacity 1.0 override
 windowrule = match:class ^(firefox)$, match:title ^(Picture-in-Picture)$, float on
 windowrule = match:class ^(zoom)$, float on
 
