--- a/foot/.config/foot/dank-colors.ini
+++ b/foot/.config/foot/dank-colors.ini
@@ -1,14 +1,14 @@
 [colors]
-foreground=e4e2e3
-background=131315
-selection-foreground=e4e2e3
-selection-background=424753
+foreground=e2e2e2
+background=131313
+selection-foreground=e2e2e2
+selection-background=d4d4d4
 
-regular0=2a2a2a
-regular1=ed5491
+regular0=131313
+regular1=e14986
 regular2=9dd66e
 regular3=dba87b
-regular4=de6966
+regular4=d05d5b
 regular5=bfbfbf
 regular6=ffffff
 regular7=abb2bf
@@ -17,6 +17,6 @@ bright1=e05f97
 bright2=aee086
 bright3=e8bd97
 bright4=d4d4d4
-bright5=c76673
-bright6=b57268
+bright5=bb5b6a
+bright6=a9685e
 bright7=ffffff
