--- a/foot/.config/foot/dank-colors.ini
+++ b/foot/.config/foot/dank-colors.ini
@@ -3,6 +3,7 @@ foreground=e2e2e2
 background=131313
 selection-foreground=e2e2e2
 selection-background=d4d4d4
+cursor = 131313 ffffff
 
 regular0=131313
 regular1=e14986
@@ -20,3 +21,5 @@ bright4=d4d4d4
 bright5=bb5b6a
 bright6=a9685e
 bright7=ffffff
+
+dim-blend-towards=black
