--- a/hyprland/.config/hypr/confs/windowrules.conf
+++ b/hyprland/.config/hypr/confs/windowrules.conf
@@ -28,6 +28,7 @@ windowrule = match:class ^(xdg-desktop-portal)$, float on, size (monitor_w*0.5) 
 windowrule = match:class ^(xdm-app), float on
 
 windowrule = match:class ^(brave-browser)$, opacity 1.0 override
+windowrule = match:class ^(helium)$, opacity 1.0 override
 windowrule = match:class ^(firefox)$, match:title ^(Picture-in-Picture)$, float on
 windowrule = match:class ^(zoom)$, float on
 
