--- a/hyprland/.config/hypr/laptop.conf
+++ b/hyprland/.config/hypr/laptop.conf
@@ -10,4 +10,5 @@ source = ~/.config/hypr/confs/decoration.conf
 source = ~/.config/hypr/confs/windowrules.conf
 source = ~/.config/hypr/confs/keybinds.conf
 source = ~/.config/hypr/confs/misc.conf
+source = ~/.config/hypr/dms/cursor.conf
 source = ~/.config/hypr/confs/custom.conf
