--- a/foot/.config/foot/foot.ini
+++ b/foot/.config/foot/foot.ini
@@ -1,6 +1,6 @@
 # -*- conf -*-
 
-shell=fish
+shell=fish -c zellij attach -c main
 title=foot
 font=JetBrains Mono Nerd Font:size=12
 letter-spacing=0
@@ -18,7 +18,7 @@ style=beam
 beam-thickness=1.5
 
 [colors]
-alpha=1.0
+alpha=0.1
 # dms
 # foreground=e2e2e2
 # background=131313
