--- a/hyprland/.config/hypr/confs/keybinds.conf
+++ b/hyprland/.config/hypr/confs/keybinds.conf
@@ -12,7 +12,7 @@ bind = $mod, comma, exec, dms ipc call settings toggle
 bind = $mod, N, exec, dms ipc call notifications toggle
 bind = $mod SHIFT, N, exec, dms ipc call notepad toggle
 bind = $mod, TAB, exec, dms ipc call hypr toggleOverview
-bind = $mod, B, exec, helium-browser
+bind = $mod, B, exec, brave
 bind = $mod, E, exec, thunar
 bind = $mod, DELETE, exec, dms ipc call bar toggle index 0
 # bind = $mod, W, exec, elecwhat
