--- a/foot/.config/foot/foot.ini
+++ b/foot/.config/foot/foot.ini
@@ -1,6 +1,6 @@
 # -*- conf -*-
 
-shell=fish -c zellij attach -c main
+shell=fish
 title=foot
 font=JetBrains Mono Nerd Font:size=12
 letter-spacing=0
@@ -8,7 +8,7 @@ dpi-aware=no
 # pad=10x10 center
 bold-text-in-bright=no
 gamma-correct-blending=no
-include=~/.config/foot/dank-colors.ini
+include=~/.config/foot/themes/catppuccin-mocha.ini
 
 [scrollback]
 lines=10000
@@ -18,29 +18,33 @@ style=beam
 beam-thickness=1.5
 
 [colors]
-alpha=0.1
-# dms
-# foreground=e2e2e2
-# background=131313
-# selection-foreground=e2e2e2
-# selection-background=d4d4d4
-
-# regular0=131313
-# regular1=e14986
-# regular2=9dd66e
-# regular3=dba87b
-# regular4=d05d5b
-# regular5=bfbfbf
-# regular6=ffffff
-# regular7=abb2bf
-# bright0=5c6370
-# bright1=e05f97
-# bright2=aee086
-# bright3=e8bd97
-# bright4=d4d4d4
-# bright5=bb5b6a
-# bright6=a9685e
-# bright7=ffffff
+alpha=1
+# foreground=c0caf5
+# background=1a1b26
+#
+# ## Normal/regular colors (color palette 0-7)
+# regular0=15161E  # black
+# regular1=f7768e  # red
+# regular2=9ece6a  # green
+# regular3=e0af68  # yellow
+# regular4=7aa2f7  # blue
+# regular5=bb9af7  # magenta
+# regular6=7dcfff  # cyan
+# regular7=a9b1d6  # white
+#
+# ## Bright colors (color palette 8-15)
+# bright0=414868   # bright black
+# bright1=f7768e   # bright red
+# bright2=9ece6a   # bright green
+# bright3=e0af68   # bright yellow
+# bright4=7aa2f7   # bright blue
+# bright5=bb9af7   # bright magenta
+# bright6=7dcfff   # bright cyan
+# bright7=c0caf5   # bright white
+#
+# ## dimmed colors (see foot.ini(5) man page)
+# dim0=ff9e64
+# dim1=db4b4b
 
 [key-bindings]
 scrollback-up-page=Page_Up
