--- a/hyprland/.config/hypr/confs/execs.conf
+++ b/hyprland/.config/hypr/confs/execs.conf
@@ -10,3 +10,6 @@ exec-once = hyprctl dispatch workspace 1
 
 # Forward bluetooth media commands to MPRIS
 exec-once = mpris-proxy
+
+# Start lan-mouse for kvm between pc and laptop
+# exec-once = lan-mouse daemon
