--- a/hyprland/.config/hypr/confs/input-laptop.conf
+++ b/hyprland/.config/hypr/confs/input-laptop.conf
@@ -3,7 +3,9 @@ input {
     kb_layout = br
     kb_variant = abnt2
 
-    force_no_accel = true
+    # force_no_accel = true
+    accel_profile = flat
+    sensitivity = 1
     numlock_by_default = true
     focus_on_close = 1
 
