--- a/hyprland/.config/hypr/confs/keybinds.conf
+++ b/hyprland/.config/hypr/confs/keybinds.conf
@@ -15,7 +15,7 @@ bind = $mod, TAB, exec, dms ipc call hypr toggleOverview
 bind = $mod, B, exec, brave
 bind = $mod, E, exec, thunar
 bind = $mod, DELETE, exec, dms ipc call bar toggle index 0
-# bind = $mod, W, exec, elecwhat
+bind = $mod, T, exec, dms ipc call spotlight toggleQuery 'tm '
 
 # === Cheat sheet
 bind = $mod SHIFT, Slash, exec, dms ipc call keybinds toggle hyprland
