--- a/ssh/.ssh/config
+++ b/ssh/.ssh/config
@@ -11,7 +11,7 @@ Host github-conpec
 	IdentitiesOnly yes
 
 Host gitlab-unicamp
-	HostName gitlab.com
+	HostName gitlab.unicamp.br
 	User git
 	IdentityFile ~/.ssh/unicamp
 	IdentitiesOnly yes
