--- a/dms/.config/DankMaterialShell/settings.json
+++ b/dms/.config/DankMaterialShell/settings.json
@@ -15,7 +15,7 @@
   "dockTransparency": 1,
   "widgetBackgroundColor": "sc",
   "widgetColorMode": "default",
-  "cornerRadius": 32,
+  "cornerRadius": 13,
   "niriLayoutGapsOverride": -1,
   "niriLayoutRadiusOverride": -1,
   "niriLayoutBorderSize": -1,
@@ -130,7 +130,7 @@
       "width": 50
     }
   ],
-  "showWorkspaceIndex": true,
+  "showWorkspaceIndex": false,
   "showWorkspaceName": false,
   "showWorkspacePadding": false,
   "workspaceScrolling": false,
@@ -190,7 +190,7 @@
   "lockDateFormat": "ddd d MMM yyyy",
   "mediaSize": 0,
   "appLauncherViewMode": "list",
-  "spotlightModalViewMode": "grid",
+  "spotlightModalViewMode": "list",
   "sortAppsAlphabetically": true,
   "appLauncherGridColumns": 4,
   "spotlightCloseNiriOverview": true,
@@ -224,8 +224,8 @@
   "launcherLogoContrast": 1,
   "launcherLogoSizeOffset": 0,
   "fontFamily": "Inter Variable",
-  "monoFontFamily": "Fira Code",
-  "fontWeight": 400,
+  "monoFontFamily": "Adwaita Mono",
+  "fontWeight": 500,
   "fontScale": 1,
   "notepadUseMonospace": true,
   "notepadFontFamily": "",
@@ -269,22 +269,22 @@
   "terminalsAlwaysDark": true,
   "runDmsMatugenTemplates": true,
   "matugenTemplateGtk": true,
-  "matugenTemplateNiri": true,
+  "matugenTemplateNiri": false,
   "matugenTemplateHyprland": true,
-  "matugenTemplateMangowc": true,
-  "matugenTemplateQt5ct": true,
+  "matugenTemplateMangowc": false,
+  "matugenTemplateQt5ct": false,
   "matugenTemplateQt6ct": true,
-  "matugenTemplateFirefox": true,
-  "matugenTemplatePywalfox": true,
-  "matugenTemplateZenBrowser": true,
-  "matugenTemplateVesktop": true,
-  "matugenTemplateEquibop": true,
-  "matugenTemplateGhostty": true,
-  "matugenTemplateKitty": true,
+  "matugenTemplateFirefox": false,
+  "matugenTemplatePywalfox": false,
+  "matugenTemplateZenBrowser": false,
+  "matugenTemplateVesktop": false,
+  "matugenTemplateEquibop": false,
+  "matugenTemplateGhostty": false,
+  "matugenTemplateKitty": false,
   "matugenTemplateFoot": true,
-  "matugenTemplateAlacritty": true,
+  "matugenTemplateAlacritty": false,
   "matugenTemplateNeovim": true,
-  "matugenTemplateWezterm": true,
+  "matugenTemplateWezterm": false,
   "matugenTemplateDgop": true,
   "matugenTemplateKcolorscheme": true,
   "matugenTemplateVscode": true,
@@ -462,12 +462,12 @@
           "enabled": true
         }
       ],
-      "spacing": 3,
+      "spacing": 0,
       "innerPadding": -8,
       "bottomGap": 0,
-      "transparency": 0,
-      "widgetTransparency": 0.1,
-      "squareCorners": false,
+      "transparency": 1,
+      "widgetTransparency": 1,
+      "squareCorners": true,
       "noBackground": false,
       "gothCornersEnabled": false,
       "gothCornerRadiusOverride": false,
@@ -476,8 +476,8 @@
       "borderColor": "surfaceText",
       "borderOpacity": 1,
       "borderThickness": 1,
-      "fontScale": 1.3,
-      "autoHide": false,
+      "fontScale": 1,
+      "autoHide": true,
       "autoHideDelay": 250,
       "openOnOverview": false,
       "visible": true,
@@ -488,7 +488,10 @@
       "scrollYBehavior": "none",
       "shadowIntensity": 0,
       "shadowColorMode": "text",
-      "shadowOpacity": 10
+      "shadowOpacity": 10,
+      "widgetOutlineColor": "primary",
+      "scrollEnabled": false,
+      "showOnWindowsOpen": false
     }
   ],
   "desktopClockEnabled": false,
