--- a/foot/.config/foot/foot.ini
+++ b/foot/.config/foot/foot.ini
@@ -1,6 +1,6 @@
 # -*- conf -*-
 
-shell=fish
+shell=tmux new-session -A -s 'main'
 title=foot
 font=JetBrains Mono Nerd Font:size=12
 letter-spacing=0
@@ -18,7 +18,7 @@ style=beam
 beam-thickness=1.5
 
 [colors]
-alpha=1
+alpha=0.95
 # foreground=c0caf5
 # background=1a1b26
 #
