--- a/hyprland/.config/hypr/confs/monitors-laptop.conf
+++ b/hyprland/.config/hypr/confs/monitors-laptop.conf
@@ -8,6 +8,9 @@ monitor = , 1920x1080@60, auto, 1, mirror, desc:BOE 0x0C02
 
 # Dual-monitor conf
 
+# Kitnet
+monitor = desc:Samsung Electric Company LF24T35, 1920x1080@74.97, -1920x0, 1
+
 # Unknown
 monitor = desc:LG Electronics LG FULL HD 0x01010101, 1920x1080@74.97, 0x-1080, 1
 
